Fixed minor display problem in Opera. (Similar to IE: text fields overflowing.) I don't think Opera <input>s and <select>s inherits CSS attributes properly.

--- a/Perl/main.css
+++ b/Perl/main.css
@@ -6,6 +6,12 @@ body{
 	font-size: 12px;
 }
 
+/* in opera, <input>s and <select>s don't take the font-size of <body>. feh. */
+.operaDoesNotInheritProperly{
+	font-family: arial, helvetica, sans-serif;
+	font-size: 12px;
+}
+
 #container{
 	width: 760px;
 	margin: 0 auto;
